fixed contrast issues

--- a/styles/form.css
+++ b/styles/form.css
@@ -160,6 +160,6 @@ footer {
 }
 .optional {
     font-size: 12px;
-    color: #708090;
+    color: #404040;
     margin-left: 6px;
 }
